# MagnusIA

./: .gitignore  README.md  main.py  matteo.cavelier@edu.esiee-it.fr  pyproject.toml
.github/workflows/: ci.yml
app/: package.json  server.js
app/public/: index.html  magnus-data.js  magnus-filters.css  magnus-logic.js  magnus-themes.js
magnus-doc/: mkdocs.yml
magnus-doc/docs/: index.md  install.md  notebook.md  quick_start.md
magnus-doc/site/: 404.html  index.html
mlruns/0/: meta.yaml
mlruns/153181299388697725/: meta.yaml
models/: multi_study_results.json
models/duration-5-False/: best_params.json  best_pipeline.joblib
models/duration-noturn-novstatus-1-True/: best_params.json  best_pipeline.joblib  metrics.json
models/duration-noturn-novstatus-2-True/: best_params.json  best_pipeline.joblib  metrics.json
models/duration-noturn-novstatus-3-True/: best_params.json  metrics.json
models/duration-noturn-novstatus-4-True/: best_params.json  best_pipeline.joblib  metrics.json
models/duration-noturn-novstatus-5-True/: best_params.json  best_pipeline.joblib  metrics.json
models/duration-noturn-novstatus-6-True/: best_params.json  best_pipeline.joblib  metrics.json
models/duration-noturn-novstatus-7-True/: best_params.json  best_pipeline.joblib  metrics.json
notebooks/: eda_cleaning.ipynb  optuning.ipynb  result_analysis.ipynb
src/: clean_data.py  main.py  train.py  train_ai.py  train_optuna.py  train_optuna_multi.py  train_rf.py
tests/: configtest.py  pytest.ini  requirements-test.txt  test_clean_data.py  test_main.py  test_train.py
(+176 files in other folders)
